# langbot

./: .compare_env_vault.py  .coveragerc  .gitignore  .langbot.py.swp  .load_env_to_vault.py  CODE_REVIEW.md  MEMORY_POLICY.md  README.md  conftest.py  console.py  engines.py  input.py  langbot.py  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md  utils.py  vault.py  web_tools.py
components/: __init__.py  code_search.py  console.py  engines.py  file_ops.py  input.py  supabase_sync.py  tasks.py  utils.py  vault.py  web_tools.py
tests/: test_code_search.py  test_console.py  test_engines.py  test_file_ops.py  test_input.py  test_tasks.py  test_utils.py  test_vault.py  test_warmup.py  test_web_tools.py
