[project]
name = "langbot"
version = "0.1.0"
description = "Terminal-based, tool-using AI agent built on LangGraph + LangChain."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langchain-huggingface",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "chromadb",
    "sentence-transformers",
    "cryptography",
    "requests>=2.31",
    "httpx>=0.27",
    "colorama>=0.4.6",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5",
]

[project.scripts]
langbot = "langbot:main"
